--- a/docs/modules/ROOT/partials/nav-howtos.adoc
+++ b/docs/modules/ROOT/partials/nav-howtos.adoc
@@ -1,3 +1,4 @@
 * xref:how-tos/feature-requests.adoc[Feature requests]
 * xref:how-tos/opsgenie.adoc[Integrating Alertmanager with OpsGenie]
 * xref:how-tos/synthesize.adoc[Synthesize a cluster]
+* xref:how-tos/create-tenant.adoc[Create a tenant]
