--- a/docs/modules/ROOT/partials/nav-howtos.adoc
+++ b/docs/modules/ROOT/partials/nav-howtos.adoc
@@ -2,4 +2,5 @@
 * xref:how-tos/opsgenie.adoc[Integrating Alertmanager with OpsGenie]
 * xref:how-tos/synthesize.adoc[Synthesize a cluster]
 * xref:how-tos/create-tenant.adoc[Create a tenant]
+* xref:how-tos/create-missing-cloud-dist.adoc[Create missing cloud, region, or distribution]
 * xref:how-tos/decommission.adoc[Decommission cluster or tenant]
