--- a/docs/modules/ROOT/pages/explanation/synthesize.adoc
+++ b/docs/modules/ROOT/pages/explanation/synthesize.adoc
@@ -8,13 +8,13 @@ This explanation goes into the details that are omitted in xref:how-tos/synthesi
 
 There's quite a few fields to fill out when creating a cluster.
 
-ID:: Choose a unique ID for the cluster.
+ID:: The cluster ID is auto-generated if the field is left empty.
+Optionally, you can provide a unique ID for the cluster.
+If the field is filled in, the value will override the auto-generated ID.
 This field is limited to lower-case characters `a-z`, numbers `0-9` and `-`.
 The length is limited to 1-61 characters.
 +
 NOTE: This field cannot be changed after creation, it's used as the Kubernetes object name for the cluster by Lieutenant.
-+
-NOTE: We're planning to make the ID field optional, see ticket https://ticket.vshn.net/browse/PORTAL-49[PORTAL-49] in Jira.
 Display Name:: Choose a descriptive name.
 Check first on the cluster listing overview how other clusters of the tenant are named.
 Lieutenant Tenant:: Choose the tenant to which this cluster belongs
