--- a/docs/modules/ROOT/pages/how-tos/synthesize.adoc
+++ b/docs/modules/ROOT/pages/how-tos/synthesize.adoc
@@ -19,6 +19,14 @@ If the tenant doesn't exist yet, see the documentation on xref:how-tos/create-te
 . Create a new cluster in https://control.vshn.net/syn/lieutenantclusters/vshn-lieutenant-prod/_create[control.vshn.net].
 See xref:explanation/synthesize.adoc#_creating_a_new_cluster_on_control_vshn_net[section "creating a new cluster on control.vshn.net"] of the "Synthesize a cluster" explanation for a more detailed breakdown of the form fields.
 
+. Note down the `kubectl` command shown, you'll need it later.
++
+[NOTE]
+====
+Right now, you need to refresh the page you land on after creating a cluster in order for the command to be shown.
+We are working on addressing this issue, see Jira ticket https://ticket.vshn.net/browse/PORTAL-50[PORTAL-50].
+====
+
 . Run Commodore to create a local checkout of the new cluster's configuration.
 See the Project Syn https://syn.tools/syn/how-tos/compile-catalog.html["compile a catalog" how-to].
 Use `\https://api.syn.vshn.net` as the value for `LIEUTENANT_URL`.
@@ -31,25 +39,8 @@ Skip the "Cleanup" of that tutorial step for now.
 . Create any required secrets in Vault.
 See the section describing how to <<_list_referenced_secrets,list referenced secrets>> to generate a list of all secrets referenced in the cluster catalog.
 
-. Fetch the install URL from the {synfra-cluster}.
-+
-[source,bash]
-----
-export KUBECONFIG=/path/to/synfra.kubeconfig
-export LIEUTENANT_TOKEN=$(kubectl config view -o jsonpath='{.users[?(@.name == "syn-synfra")].user.token}'  --raw)
-export LIEUTENANT_AUTH="Authorization:Bearer ${LIEUTENANT_TOKEN}"
-
-export INSTALL_URL=$(curl -H "${LIEUTENANT_AUTH}" "https://${LIEUTENANT_URL}/clusters/${CLUSTER_ID}" | jq -r ".installURL")
-----
-+
-. Install Steward on the new cluster.
+. Install Steward on the new cluster by executing the `kubectl` command you noted down in step 2.
 +
 CAUTION: Make sure the `kubectl` command in this step is executed against the cluster to synthesize
 +
-[source,bash]
-----
-export KUBECONFIG=/path/to/new/cluster.kubeconfig
-kubectl create -f "${INSTALL_URL}"
-----
-+
-NOTE: See the documentation of the xref:explanation/bootstrap-token.adoc[bootstrap token and install URL] for a more detailed explanation, including instructions on how to reset the bootstrap token.
+NOTE: See the documentation of the xref:explanation/bootstrap-token.adoc[bootstrap token and install URL] for a more detailed explanation, including instructions on how to fetch the install URL from the Lieutenant API and instructions to reset the bootstrap token.
